<resources>
    <string name="app_name">6DataStorage</string>
    <!-- Main Activity -->
    <string name="MainActivity_TitleLabel">Data Persistence</string>
    <string name="Button_M1">Button_M1: Start FilePersistenceActivity</string>
    <string name="Button_M2">Button_M2: Start SharedPreferencesActivity</string>
    <string name="Button_M3">Button_M3: Start DataSQLiteActivity</string>
    <string name="Button_M4">Button_M4: Start LitepalActivity</string>
    <string name="EditText_M1">EditText_M1</string>

    <!-- File Persistence Activity -->
    <string name="FilePersistenceActivity_TitleLabel">File Persistence</string>
    <string name="EditText_FP1">EditText_FP1</string>
    <string name="Button_FP1">Button_FP1: Save</string>

    <!-- Shared Preferences Activity -->
    <string name="SharedPreferencesActivity_TitleLabel">Shared Preferences</string>
    <string name="Button_SP1">Button_SP1: Save</string>
    <string name="Button_SP2">Button_SP2: Restore</string>
    <string name="EditText_SP1">name</string>
    <string name="EditText_SP2">18</string>
    <string name="EditText_SP3">YES/NO</string>

    <!-- SQLite ACID Activity -->
    <string name="DataSQLiteActivity_TitleLabel">Data SQLite</string>
    <string name="Button_DS1">Button_DS1: Create Database</string>
    <string name="Button_DS2">Button_DS2: Update Database</string>
    <string name="Button_DS3">Button_DS3: Insert Data</string>
    <string name="Button_DS4">Button_DS4: Update Data</string>
    <string name="Button_DS5">Button_DS5: Delete Data</string>
    <string name="Button_DS6">Button_DS6: Retrieve(select) Data</string>

    <!-- Litepal Activity -->
    <string name="LitepalActivity_TitleLabel">Litepal Practice</string>
    <string name="Button_LA1">Button_LA1: Create Database</string>
    <string name="Button_LA2">Button_LA2: Insert Data</string>
    <string name="Button_LA3">Button_LA3: Update Data</string>
    <string name="Button_LA4">Button_LA4: Delete Data</string>
    <string name="Button_LA5">Button_LA5: Retrieve(Query) Data</string>

</resources>
