<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Button_LA1"
        android:text="@string/Button_LA1"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Button_LA2"
        android:text="@string/Button_LA2"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Button_LA3"
        android:text="@string/Button_LA3"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Button_LA4"
        android:text="@string/Button_LA4"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Button_LA5"
        android:text="@string/Button_LA5"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>